Closed Bug 670645 Opened 14 years ago Closed 14 years ago

Cannot find texture from pixmap symbols

Categories

(Core :: Graphics, defect)

All
Other
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla8

People

(Reporter: rob, Unassigned)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/534.30 (KHTML, like Gecko) Chrome/12.0.742.112 Safari/534.30 Steps to reproduce: On startup the following warnings appear: Can't find symbol 'glXBindTexImageEXT' Can't find symbol 'glXReleaseTexImageEXT Hardware graphics platform: Mesa 7.10 and mesa git on Intel Ironlake Actual results: The TFP symbols are not looked up through glXGetProcAddress and are thus not found - texture from pixmap is then not enabled. Expected results: The texture from pixmap functions should be found and texture from pixmap enabled.
This patch gets rid of the symbol lookup warnings and allows the texture from pixmap to be enabled on this platform. Feedback welcome!
Comment on attachment 545157 [details] [diff] [review] Patch to try and address this issue Review of attachment 545157 [details] [diff] [review]: -----------------------------------------------------------------
Attachment #545157 - Flags: review?(matt.woodrow+bugzilla)
Comment on attachment 545157 [details] [diff] [review] Patch to try and address this issue Review of attachment 545157 [details] [diff] [review]: ----------------------------------------------------------------- Interesting that this has never shown up for other extensions. Looks good to me though! ::: gfx/thebes/GLContextProviderGLX.cpp @@ +239,4 @@ > { > mHasTextureFromPixmap = PR_TRUE; > + } else { > + NS_WARNING("Texture from pixmap disabled"); I think we should just return PR_FALSE here, performance without this enabled is significantly reduced over just using X to composite.
Attachment #545157 - Flags: review?(matt.woodrow+bugzilla) → review+
Thanks Matt. I've opened a bug about failing the initialisation in that case: https://bugzilla.mozilla.org/show_bug.cgi?id=671259
Status: UNCONFIRMED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Whiteboard: [inbound]
Target Milestone: --- → mozilla8
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: