Bug 670645 - Lookup texture_from_pixmap symbols using glXGetProcAddress. r=mattwoodrow